logs/Slang/generated/hdlconv/hdlconvertor_p526.sv.log
name: hdlconvertor_p526
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p526.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p526.sv:1:1: error: language feature not yet supported
class B1;
^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p526.sv:7:1: error: language feature not yet supported
class D1 extends B1;
^~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p526.sv:11:1: error: language feature not yet supported
class B2;
^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p526.sv:17:1: error: language feature not yet supported
class D2 extends B2;
^~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p526.sv:27:1: error: expected member
constraint D2::e { soft y > 100 ; }
^~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p526.sv:27:35: error: expected member
constraint D2::e { soft y > 100 ; }
                                  ^
